# incubator-experimental

./: .gitignore  LICENSE  README.md
atomic-shm/: atomic_producer_consumer.hpp  atomic_semaphore.hpp  image.hpp
c_to_ctypes/: README.md  c_to_ctype.py  requirements.txt
camera_publisher/: CMakeLists.txt  README.md  package.xml
camera_publisher/include/camera_publisher/: video_pipeline.hpp
camera_publisher/src/: camera_publisher.cpp  camera_subscriber.cpp  gst_pipeline.cpp
checklist/: checklist.cpp
constexpr/: to_static_string.cpp
continuation-monad/: README.md  continuation-monad.cpp
cpp_modules_experiment/: module.cc  module.cpp
cuda/: add_two_vectors_c_style.cu  add_two_vectors_cpp_style.cu  hello_world.cu
cyclic_view/: CMakeLists.txt  cyclic_viewConfig.cmake.in
cyclic_view/include/: cyclic_view.hpp
cyclic_view/include/cyclic_view/: cyclic_view.hpp
cyclic_view/test/: test_cyclic_view.cpp
design_patterns/: apply.cpp  better_main.cpp  chain_of_responsibility.cpp  chain_of_rosponcibility.cpp  crpt.cpp  external_polymorphism.cpp  immutable_hash_table.cpp  lambda_wrappers.cpp  momento.cpp  named_touple.cpp  observer.cpp  observer_dynamic_multyple.cpp  physical_strong_type.pp  pimpl.hpp  pimpl_crpt.cpp  pimpl_dynamic.cpp  pipe_operator.cpp  pmpl_crtp_example.cpp  pmpl_crtp_interface_example.cpp  refactor_wrapper_crtp.cpp  shift_buffer.cpp  static_di.cpp  strategy.cpp  string_vector_to_static_view.cpp  validator.cpp  visitor.cpp
drone_exploration/: hot_cold_algo.py
follow_me/: CMakeLists.txt  fake_location_provider.cpp  fake_location_provider.h  follow_me.cpp
functional/: curry.cpp
functional/fplus/: longers_edge_polygon.cpp  memoezation.cpp  partioal_function_applicaton.cpp  product_of_numbers.cpp  sql_example.cpp
image_stabilization_px4_imu/: CMakeLists.txt  README.md  capture_video.py  image_stabilization_optical_flow.py  image_stabilization_optical_flow_1.py  image_stabilization_px4.py  image_stabilization_px4_1.py  image_stabilization_px4_ekf.py  image_stabilization_px4_target_ned.py  index.html  optical_flow.cpp  px4_websocket_server.py  script.js  test.py
lock-Free-queue-spsc-optimized/: README.md  lock-Free-queue-spsc-optimized.cpp
logger/: log.hpp  log_impl.hpp  main.cpp
mavsdk_connector/: CMakeLists.txt
mavsdk_connector/include/: mavsdk_connector.hpp
mavsdk_connector/src/: main.cpp  mavsdk_connector.cpp
monadic-pointer-wrapper/: README.md  monadic-pointer-wrapper.cpp
networking/: CMakeLists.txt  package.xml
networking/include/networking/: ip_address.hpp
networking/src/: bloom_filter.cpp  dijkstra.cpp  general_trie.cpp  m_trie_routing.cpp  shortest_path_first.cpp  trie_routing.cpp
networking/test/: ip_address_test.cpp
performace-aware/: 8086_instruction_set.cpp  profiler.hpp
producer_consumer/: example.py  performance_measure.py  producer_consumer.py
ranges/: CMakeLists.txt  ranges.cpp
simd-copy/: neon_copy.hpp  simd_copy.cpp
sml_compile_time_state_machine/: comile_time_state_machine.hpp
static_image_msgs/: CMakeLists.txt  package.xml
static_image_msgs/msg/: Image4k.msg  Imagefhd.msg
stl-course/blockchain_ticker/: CMakeLists.txt  bitcoin.cpp  bitcoin.py
stl-course/circular_buffer_adapter/include/: circular_buffer_adapter.hpp
stl-course/misc/: iterator_helpers.cpp  prime_generator_iterator.cpp  regex.cpp  string.cpp
sync-utc-px4/: CMakeLists.txt
sync-utc-px4/include/: arithmetic_algorithm.hpp  mavsdk_connector.hpp  sliding_window.hpp
sync-utc-px4/src/: mavsdk-timesync.cpp  mavsdk_connector.cpp  sync-utc-px4-timesync.cpp  sync-utc-px4.cpp
v4l2_src/: README.md  v4l2_caps.cpp  v4l2_full.cpp  v4l2_src.cpp
zero-sm/: drone_sml.cpp  nested_sml.cpp  zero_sm.cpp  zero_sm_varient.cpp  zero_sm_wip.cpp
